--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -63,7 +63,7 @@ body {
 						<button type="button" class="btn"
 							style="background-color: #1D3A85; color: white"
 							data-bs-toggle="modal" data-bs-target="#exampleModal">
-							Cerrar Sesion</button>
+							<i class="fa-solid fa-user"></i></button>
 					</div>
 				</div>
 				<div class="modal fade" id="exampleModal" tabindex="-1"
