--- a/src/main/resources/templates/enrollments/list-course_sections.html
+++ b/src/main/resources/templates/enrollments/list-course_sections.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="layout/layout :: frag-head">
-<meta charset="ISO-8859-1">
+
+<meta charset="UTF-8">
 <title>Insert title here</title>
 </head>
 <body>
@@ -14,20 +15,48 @@
 				<div class="card-body" style="text-align: left;">
 
 					<div class="row g-3 needs-validation">
-						<div class="card text-center">
-							<div class="card-header">Lista de Secciones</div>
+						<div class="card text">
+							<form th:action="@{/enrollments/savenewSection}"
+								th:object="${enrollment}" method="post"
+								class="row g-3 needs-validation justify-content-center">
+
+								<div class="mt-3 col-md-3   mx-auto">
+									<label for="section" class="form-label">Código de la
+										Seccion</label> <select class="form-select" th:field="*{section}"
+										required>
+										<option value="">Elija una Sección</option>
+										<option th:each="section : ${sections}"
+											th:value="${section.id}" th:text="${section.id}"
+											th:if="${section.course.id == course.id}"></option>
+									</select>
+									<button class="btn btn-success" type="submit">
+						<i class="fa-solid fa-floppy-disk"></i> Elegir
+					</button>
+									<div class="col-12 mb-4" style="text-align: center;"></div>
+								</div>
+
+								<div class="col-md-2 invisible" style="text-align: left;">
+									<label for="student" class="form-label">Alumno</label> <select
+										class="form-select" th:field="*{student}" required>
+										<option th:value="${student.id}" th:text="${student.id}"></option>
+									</select>
+								</div>
+
+
+							</form>
+							<div class="card-header">Secciones Disponibles</div>
 							<form th:action="@{/enrollments/savenewSection}"
 								th:object="${enrollment}" method="post" class="card-body">
 
 								<table class="table">
 									<thead>
-										<tr style="background: #1D3A85; color:white">
-											<th scope="col">Codigo</th>
+										<tr style="background: #1D3A85; color: white">
+											<th scope="col">Código</th>
 											<th scope="col">Nombre</th>
 											<th scope="col">Profesor</th>
 											<th scope="col">Dia de Clase</th>
 											<th scope="col">Hora de Inicio</th>
-											<th scope="col">Hora de Finalizacion</th>
+											<th scope="col">Hora de Finalización</th>
 											<th scope="col">Vacantes</th>
 											<th scope="col"></th>
 										</tr>
@@ -59,32 +88,7 @@
 
 
 			</div>
-			<form th:action="@{/enrollments/savenewSection}"
-				th:object="${enrollment}" method="post"
-				class="row g-3 needs-validation justify-content-center">
 
-				<div class="col-md-3   mx-auto">
-					<label for="section" class="form-label">Codigo de la
-						Seccion</label> <select class="form-select" th:field="*{section}" required>
-						<option value="">Elige una Seccion</option>
-						<option th:each="section : ${sections}" th:value="${section.id}"
-							th:text="${section.id}" th:if="${section.course.id == course.id}"></option>
-					</select>
-				</div>
-
-				<div class="col-md-2 invisible" style="text-align: left;">
-					<label for="student" class="form-label">Alumno</label> <select
-						class="form-select" th:field="*{student}" required>
-						<option th:value="${student.id}" th:text="${student.id}"></option>
-					</select>
-				</div>
-
-				<div class="col-12 mb-4" style="text-align: center;">
-					<button class="btn btn-warning" type="submit">
-						<i class="fas fa-plus"></i> Seleccionar
-					</button>
-				</div>
-			</form>
 		</section>
 
 	</main>
