--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -9,7 +9,7 @@
 		<div class="p-5 mb-4 bg-light rounded-3">
 			<div class="container-fluid py-5">
 				<h1 class="display-5 fw-bold">
-					<i class="fas fa-chalkboard-teacher"></i> BIENVENIDO A STUMATCH
+					<i class="fas fa-chalkboard-teacher"></i> BIENVENIDO A UCT
 				</h1>
 				<p class="col-md-8 fs-4 mt-5 mb-5" th:text="${'Alumno: ' + student.firstName + ' ' + student.lastName}"></p>
 				<a class="btn btn-danger btn-lg" style="color: white"
